Fixed a few more things in the stylesheet due to some more border artifacts appearing on iOS Safari. Updated the copyright year. Updated the TODO list.

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,19 @@ body {
 	display: inline-block;
 	min-width: 100%;
 }
+p {
+	padding: 0;
+	margin: 0 0 2em 0
+}
+p.compact {margin: 1em 0 1em 0}
+p.tight {margin: 0}
 a {
 	color: #2A3957;
 	text-decoration: none;
 }
 a:hover {text-decoration: underline}
 h1 {
-	margin: 1.5em 0 0.5em 0;
+	margin: 0 0 0.5em 0;
 	font-size: 16pt;
 	font-weight: bold;
 	color: #2A3957;
@@ -22,15 +28,20 @@ fieldset {
 	border: 2px solid #BFBFBF;
 }
 select {vertical-align: top}
-table {border-collapse: collapse}
+table {
+	border-collapse: collapse;
+	margin: 0 0 2em 0;
+}
 th, td {
 	padding: 0.25em 0.75em;
 	text-align: center;
 }
 th {
-	background-color: #EFEFEF;
+	background-color: #696969;
+	text-align: left;
 	font-weight: normal;
-	font-style: italic;
+	color: #FFFFFF;
+	border: 2px solid #696969;
 }
 td.leftAlign {text-align: left}
 td.rightAlign {text-align: right}
@@ -44,10 +55,6 @@ tr.altRow td {background-color: #EFEFEF}
 	padding: 1em;
 	background-color: #F7F7B5;
 	font-family: monospace;
-}
-.tight {
-	padding: 0;
-	margin: 0;
 }
 .submitButton {
 	border: 1px solid #000000;
@@ -133,7 +140,7 @@ ul.headerButtons a:hover {
 	color: #FFFFFF;
 }
 .mainContent {
-	padding: 0.5em 2.5em 4em 2.5em;
+	padding: 1.5em 2.5em 4em 2.5em;
 	line-height: 150%;
 	font-size: 12pt;
 	font-family: sans-serif;
@@ -154,11 +161,7 @@ ul.headerButtons a:hover {
 
 /* elimination bracket table */
 table.bracket {border-collapse: collapse}
-table.bracket th {
-	padding: 0.25em 2em;
-	font-weight: normal;
-	font-style: italic;
-}
+table.bracket th {text-align: center}
 table.bracket td {
 	padding: 0 0.5em;
 	font-size: 9pt;
